--- a/style.css
+++ b/style.css
@@ -67,23 +67,50 @@ button:hover {
   transition: all 0.3s ease 0s;
 }
 
-h1 {
-  font-size: 8rem;
+main {
   display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
+}
+
+h1 {
+  font-size: 4rem;
+  padding: 2rem 5rem;
+  display: flex;
+  justify-content: flex-start;
   font-family: "Lora", serif;
   color: #fdd1cc;
-  line-height: 7rem;
+}
+
+section {
+  line-height: 0px;
 }
 
 h3 {
   font-size: 1.15rem;
+  padding: 1rem 5rem;
   display: flex;
-  justify-content: flex-end;
-  align-self: flex-end;
+  justify-content: flex-start;
   font-family: "Lora", serif;
   color: #fdd1cc;
 }
+
+p {
+  font-size: 1rem;
+  padding: 4rem 4rem;
+  display: flex;
+  justify-content: space-evenly;
+  font-family: "Lora", serif;
+  color: #fdd1cc;
+  letter-spacing: 1rem;
+  text-align: justify;
+}
+
+.cookie {
+  width: 30rem;
+  height: 100%;
+  padding: 1rem;
+}
+
 legend {
   text-align: center;
   padding: 2rem;
